Terjemahkan beberapa bagian jadi Indo

--- a/src/app/pages/forgot/forgot.page.html
+++ b/src/app/pages/forgot/forgot.page.html
@@ -2,8 +2,8 @@
 
     <div class="ion-padding section-title">
       <ion-text>
-        <h1>Ohh!<br>Forgot Password</h1>
-        <div>Write Your Email Here</div>
+        <h1>Lupa Sandi?</h1>
+        <div>Tulis Email Anda di Sini</div>
       </ion-text>
     </div>
   
@@ -14,9 +14,9 @@
       </ion-item>
   
       <div class="ion-margin-top">
-        <ion-button (click)="Forgot()" expand="block" color="warning">Send</ion-button>
+        <ion-button (click)="Forgot()" expand="block" color="warning">Kirim</ion-button>
         <ion-text routerLink="/login" class="ion-text-center">
-          <p>Back</p>
+          <p>Kembali</p>
         </ion-text>
       </div>
   
