Hapus kode foto profil dokter dan fix deklarasi ganda

--- a/src/app/pages/doctor/doctor.page.html
+++ b/src/app/pages/doctor/doctor.page.html
@@ -12,9 +12,8 @@
   <div class="profile-card">
     <ion-row class="ion-text-center">
       <ion-col size="5">
-        <ion-card>
-          <ion-img [src]="imgURL + clinicID + '/doctor/' + items?.doctor_avatar">
-          </ion-img>
+        <ion-card class="icon-card"> 
+          <ion-icon name="md-person" class="large-icon"></ion-icon>
         </ion-card>
       </ion-col>
       <ion-col class="profile-name">
